Updates to user and deliveryMan app

--- a/ManbagDelivery/Manbag/Deliver-Info.plist
+++ b/ManbagDelivery/Manbag/Deliver-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.roymarmelstein.manbag</string>
+	<string>com.roymarmelstein.manbagdelivery</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb493766177326993</string>
+				<string>fb143421752485375</string>
 			</array>
 		</dict>
 	</array>
